--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
     "@mantine/hooks": "^6.0.19",
     "@tabler/icons-react": "^2.31.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.15.0"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
