--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
+    "homepage": "https://MilosOst.github.io/portfolio-site",
     "name": "portfolio-site",
     "private": true,
-    "version": "0.0.0",
+    "version": "1.0.0",
     "type": "module",
     "scripts": {
         "dev": "vite",
